<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wod"
            android:icon="@mipmap/ic_wod"
            android:title="@string/menu_wod" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_info"
            android:icon="@mipmap/ic_info"
            android:title="@string/menu_info" />

    </group>
</menu>